--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -7,7 +7,7 @@
         <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
     </head>
     <body>
-        <div id="content"></div>
+        <div id="content" class="content"></div>
         {% block javascripts %}{% endblock javascripts %}
     </body>
 </html>
