--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -3,11 +3,15 @@
     <head>
         <meta charset="UTF-8" />
         <title>{% block title %}Welcome!{% endblock title %}</title>
-        {% block stylesheets %}{% endblock stylesheets %}
+        {% block stylesheets %}
+            <link rel="stylesheet" href="{{ asset('build/common.css') }}">
+        {% endblock stylesheets %}
         <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
     </head>
     <body>
         <div id="content" class="content"></div>
-        {% block javascripts %}{% endblock javascripts %}
+        {% block javascripts %}
+            <script type="text/javascript" src="{{ asset('build/common.js') }}"></script>
+        {% endblock javascripts %}
     </body>
 </html>
