feat(product list): implement product listing

--- a/src/AppBundle/Resources/views/Default/product.html.twig
+++ b/src/AppBundle/Resources/views/Default/product.html.twig
@@ -3,5 +3,5 @@
 {% block javascripts %}
     {{ parent() }}
 
-    <script type="text/javascript" src="{{ asset('build/product.js') }}"></script>
+    <script type="text/javascript" src="{{ asset('build/product_list.js') }}"></script>
 {% endblock javascripts %}
