style(css): update sass files

--- a/assets/css/_bootstrap.scss
+++ b/assets/css/_bootstrap.scss
@@ -10,7 +10,7 @@
 @import "bs/_mixins";
 //@import "bs/root";
 //@import "bs/reboot";
-@import "bs/_type";
+//@import "bs/_type";
 //@import "bs/_images";
 @import "bs/_code";
 @import "bs/_grid";
@@ -22,7 +22,7 @@
 //@import "bs/_button-group";
 //@import "bs/_input-group";
 //@import "bs/_custom-forms";
-//@import "bs/_nav";
+@import "bs/_nav";
 //@import "bs/_navbar";
 //@import "bs/_card";
 //@import "bs/_breadcrumb";
