--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -8,6 +8,7 @@
             <link rel="stylesheet" href="{{ asset('build/common.css') }}" />
             <link rel="stylesheet" href="{{ asset('build/main.css') }}" />
         {% endblock stylesheets %}
+        <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500,600,700" rel="stylesheet">
         <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
     </head>
 
