--- a/assets/css/_general.scss
+++ b/assets/css/_general.scss
@@ -3,9 +3,6 @@ $path-to-img : '../img/';
 $path-to-font : '../fonts/';
 
 //vars
-$white: #fff;
-$black: #000;
-
 
 $pad_marg_list: (
         0: 0,
@@ -105,6 +102,7 @@ $phone: 0px;
   font-size: 16px;
   text-transform: uppercase;
   background-color: $bgC;
+  transition: .5s;
 
   @include mobile {
     max-width: 162px;
