feat(category page): implement product categories page

--- a/assets/css/_global.scss
+++ b/assets/css/_global.scss
@@ -1,9 +1,9 @@
 body {
   background-color: #ffffff;
+}
 
-  &.gradient-page {
-    background-image: linear-gradient(-220deg, #1a2837 0%, #152427 100%);
-  }
+.gradient-page {
+  background-image: linear-gradient(-220deg, #1a2837 0%, #152427 100%);
 }
 
 h2, h3 {
