refactor(index): make collection block as component; move out fetching logick into layout

--- a/assets/css/_home.scss
+++ b/assets/css/_home.scss
@@ -621,7 +621,7 @@
       box-shadow: none;
     }
 
-    #black-carousel.carousel {
+    #black-carousel>.carousel {
       max-width: 687px;
       margin-right: 50px;
 
