feat(collection): put collection page layout

--- a/src/AppBundle/Resources/views/Default/collection.html.twig
+++ b/src/AppBundle/Resources/views/Default/collection.html.twig
@@ -3,5 +3,5 @@
 {% block javascripts %}
     {{ parent() }}
 
-    <script type="text/javascript" src="{{ asset('build/collection_list.js') }}"></script>
+    <script type="text/javascript" src="{{ asset('build/collection.js') }}"></script>
 {% endblock javascripts %}
