refactor(title): change titles on pages

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>{% block title %}Home{% endblock title %}</title>
+        <title>{% block title %}Home{% endblock title %} | Binkevich</title>
 
         {% block stylesheets %}
             <link rel="stylesheet" href="{{ asset('build/common.css') }}" />
