feat(fosjs): integreate fos js routing bundle

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -15,6 +15,8 @@
     <body>
         <div id="content"></div>
 
+        <script src="{{ asset('bundles/fosjsrouting/js/router.min.js') }}"></script>
+        <script src="{{ path('fos_js_routing_js', { callback: 'fos.Router.setData' }) }}"></script>
         {% block javascripts %}
             <script type="text/javascript" src="{{ asset('build/common.js') }}"></script>
         {% endblock javascripts %}
