--- a/assets/css/_global.scss
+++ b/assets/css/_global.scss
@@ -4,6 +4,14 @@ body {
 
 .gradient-page {
   background-image: linear-gradient(-220deg, #1a2837 0%, #152427 100%);
+
+  &.contact-page {
+    padding-top: 230px;
+
+    @include tab-mob {
+      padding-top: 190px;
+    }
+  }
 }
 
 h2, h3 {
