--- a/assets/css/_categories.scss
+++ b/assets/css/_categories.scss
@@ -2,7 +2,7 @@
   padding-top: 130px;
 
   @include mobile {
-    padding-top: 60px;
+    padding-top: 25px;
   }
   .collection-title {
     text-align: center;
@@ -39,7 +39,7 @@
   .tabs {
     display: flex;
     padding-bottom: 100px;
-    button {
+    a {
       display: block;
       color: $black;
       font-family: $mon;
@@ -73,11 +73,12 @@
       }
     }
     @include mobile {
-      flex-direction: column;
+      padding-bottom: 35px;
 
-      button {
+      a {
         margin: 10px auto;
-        max-width: 100px;
+        font-size: 14px;
+        font-weight: 600;
 
         &:last-child {
           margin-right: auto;
@@ -93,8 +94,14 @@
     text-align: center;
 
     .wrap-img {
-      min-height: 137px;
-      margin-bottom: 35px;
+      min-height: 215px;
+      margin-bottom: 10px;
+      display: flex;
+      align-items: center;
+
+      @include mobile {
+        min-height: 140px;
+      }
     }
 
     img {
