--- a/assets/css/_global.scss
+++ b/assets/css/_global.scss
@@ -8,8 +8,12 @@ body {
   &.contact-page {
     padding-top: 230px;
 
-    @include tab-mob {
+    @include tablet {
       padding-top: 190px;
+    }
+
+    @include mobile {
+      padding-top: 110px;
     }
   }
 }
@@ -192,5 +196,4 @@ p {
       max-width: 100%;
     }
   }
-
 }
