--- a/app/Resources/views/invoice.html.twig
+++ b/app/Resources/views/invoice.html.twig
@@ -5,6 +5,7 @@
         <title>Invoice from Binkevich</title>
 
         {% block stylesheets %}
+            <link rel="stylesheet" href="{{ asset('build/invoice.css') }}" />
         {% endblock stylesheets %}
 
     </head>
@@ -14,20 +15,27 @@
             <div class="clearfix">
                 <div class="first-col">
                     <h4>Binkevich LIMITED</h4>
-                    <p> 09798316 <br>
+                    <p>
+                        CRN: 09798316 <br>
                         4 Windsor Terrace, <br>
-                        Hagley Road, Birmingham, <br>
-                        England, B16 8UH <br>
+                        Hagley Road, Birmingham, <br> England, B16 8UH <br>
                         Tel +447449552179 <br>
-                        Email: Binkevich.co.uk@gmail.com <br>
-                        Web site : Binkevich.co.uk <br>
+                        Email: info@binkevich.co.uk <br>
+                        Web site: binkevich.co.uk <br>
                     </p>
                 </div>
                 <div class="last-col">
                     <h4>INVOICE</h4>
                     <h5>reference: {{ order.id }}</h5>
                     <p>
-                        Date: {% if (order.invoiceDate) %}{{ order.invoiceDate | date("F j Y") }}{% else %}{{ "now" | date("F j Y") }}{% endif %}<br>
+                        {% if app.user and app.user.uniqueTaxReference is not null %}
+                            UTR: {{ app.user.uniqueTaxReference }} <br>
+                        {% endif %}
+                        Date: {% if (order.invoiceDate) %}
+                            {{ order.invoiceDate | date("d.m.Y") }} <br>
+                        {% else %}
+                            {{ "now" | date("d.m.Y") }} <br>
+                        {% endif %}
                         Bank details: Barclays <br>
                         Account N: 93721973 <br>
                         Sort code: 20-07-84 <br>
@@ -59,7 +67,7 @@
                         <td>{{ order.salesPerson | title }}</td>
                         <td>{{ order.projectName | title }}</td>
                         <td>{{ order.terms | capitalize }}</td>
-                        <td>{{ order.deliveryDate | date("F j Y") }}</td>
+                        <td>{{ order.deliveryDate | date("d.m.Y") }}</td>
                     </tr>
                 </tbody>
             </table>
@@ -109,6 +117,7 @@
                         <td class="total border-0 text-uppercase font-weight-bold">TOTAL</td>
                         <td>£{{ totalPrice }}</td>
                     </tr>
+
                 </tfoot>
             </table>
             <div class="line"></div>
