refactor(architecture): move architecture towards bundle-based packages

--- a/src/AppBundle/Resources/views/Default/collection.html.twig
+++ b/src/AppBundle/Resources/views/Default/collection.html.twig
@@ -5,5 +5,5 @@
 {% block javascripts %}
     {{ parent() }}
 
-    <script type="text/javascript" src="{{ asset('build/collection.js') }}"></script>
+    <script type="text/javascript" src="{{ asset('build/product/collection.js') }}"></script>
 {% endblock javascripts %}
