--- a/src/AppBundle/Resources/views/Default/product_view.html.twig
+++ b/src/AppBundle/Resources/views/Default/product_view.html.twig
@@ -5,5 +5,5 @@
 {% block javascripts %}
     {{ parent() }}
 
-    <script type="text/javascript" src="{{ asset('build/product_view.js') }}"></script>
+    <script type="text/javascript" src="{{ asset('build/product/view.js') }}"></script>
 {% endblock javascripts %}
