--- a/src/AppBundle/Resources/views/Default/index.html.twig
+++ b/src/AppBundle/Resources/views/Default/index.html.twig
@@ -3,5 +3,5 @@
 {% block javascripts %}
     {{ parent() }}
 
-    <script type="text/javascript" src="{{ asset('build/index.js') }}"></script>
+    <script type="text/javascript" src="{{ asset('build/home.js') }}"></script>
 {% endblock javascripts %}
